# mlp-hidden-state-b821-claude

./: .resource_finder_complete  README.md  REPORT.md  literature_review.md  planning.md  pyproject.toml  resources.md
.neurico/: idea.yaml  pipeline_results.json  pipeline_state.json
code/: README.md
datasets/: README.md
logs/: execution_claude_transcript.jsonl  paper_writer_prompt.txt  research_prompt.txt  resource_finder_prompt.txt  session_instructions.txt
paper_draft/: main.tex  references.bib
paper_draft/commands/: general.tex  macros.tex
paper_draft/sections/: abstract.tex  conclusion.tex  discussion.tex  introduction.tex  methodology.tex  related_work.tex  results.tex
paper_search_results/: all_unique.jsonl  arxiv_lookup.json  arxiv_lookup2.json  priority_paper_ids.json  similarity_of_MLP_hidden_representations_across_layers_in_neural_networks_20260424_195249.jsonl  transformer_MLP_layer_hidden_state_similarity_CKA_20260424_195403.jsonl
papers/: README.md
papers/pages/: BatchNormOrtho_2021_manifest.txt  BlockStructure_Origins_2022_manifest.txt  CKA_Kornblith_2019_manifest.txt  CKA_Reliability_2022_manifest.txt  CurvatureCompare_Yu_2018_manifest.txt  EqualityReasoningMLP_2025_manifest.txt  GloballyAttractingFP_2024_manifest.txt  GraphBasedSim_2021_manifest.txt  InnerWorkingsLM_RepDiss_2023_manifest.txt  InterLayerInfoSim_Hu_2020_manifest.txt  LAYA_2025_manifest.txt  (+12 more)
results/: environment.json  hypothesis_tests.json  summary.csv
src/: __init__.py  ablations.py  analysis.py  data.py  metrics.py  models.py  run_sweep.py  train.py
(+55 files in other folders)
