[project]
name = "research-workspace"
version = "0.1.0"
description = "Research workspace for experiments on MLP hidden state similarity"
requires-python = ">=3.10"
dependencies = [
    "arxiv>=3.0.0",
    "httpx>=0.28.1",
    "matplotlib>=3.10.9",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "pypdf>=6.10.2",
    "requests>=2.33.1",
    "scikit-learn>=1.7.2",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "tqdm>=4.67.3",
]

[tool.uv]
package = false
